@@ -1,7 +1,9 @@
 package main
 
 import (
-	// "github.com/ChimeraCoder/anaconda"
+	"encoding/json"
+	"github.com/ChimeraCoder/anaconda"
+	"io/ioutil"
 	"log"
 )
 
@@ -11,32 +13,67 @@ func main() {
 		log.Fatal(err)
 	}
 
-	ids, err := loadCache(config.CacheFile)
+	oldIds, err := loadCache(config.CacheFile)
 	if err != nil {
 		log.Fatal(err)
 	}
 
-	if len(ids) > 0 {
-		print(ids[0])
-	} else {
-		print("Have no ids(")
+	tweets, err := fetchTweets(config)
+	if err != nil {
+		log.Fatal(err)
 	}
-
-	// tweets, err := fetchTweets(config)
-	// if err != nil {
-	// 	log.Fatal(err)
-	// }
 	// j, err := json.Marshal(tweets)
 	// if err != nil {
 	// 	log.Fatal(err)
 	// }
 	// ioutil.WriteFile("foobar.json", j, 0644)
+	newIds := oldIds
+	for _, tweet := range tweets {
+		if contains(oldIds, tweet.IdStr) == false {
+			newIds = append(newIds, tweet.IdStr)
+			print("aaaaaaaaaaaaa: ")
+		}
+		print(tweet.IdStr)
+		print("\n")
+	}
+	if err := saveCache("xyz.json", newIds); err != nil {
+		log.Fatal(err)
+	}
+	if len(newIds) > len(oldIds) {
+		print(len(newIds))
+		print("\n")
+		print(len(oldIds))
+		print("\n")
+		print("bbbbbbbbbbbb: ")
+		print(newIds[0])
+		print("\n")
+	}
 }
 
-// func fetchTweets(config *config) ([]anaconda.Tweet, error) {
-// 	anaconda.SetConsumerKey(config.Twitter.ConsumerKey)
-// 	anaconda.SetConsumerSecret(config.Twitter.ConsumerSecret)
-// 	api := anaconda.NewTwitterApi(config.Twitter.AccessToken, config.Twitter.AccessTokenSecret)
-// 	tweets, err := api.GetHomeTimeline(nil)
-// 	return tweets, err
-// }
+func contains(ids []string, id string) bool {
+	for _, i := range ids {
+		if i == id {
+			return true
+		}
+	}
+	return false
+}
+
+func fetchTweets(config *config) ([]anaconda.Tweet, error) {
+	// anaconda.SetConsumerKey(config.Twitter.ConsumerKey)
+	// anaconda.SetConsumerSecret(config.Twitter.ConsumerSecret)
+	// api := anaconda.NewTwitterApi(
+	// 	config.Twitter.AccessToken,
+	// 	config.Twitter.AccessTokenSecret)
+	// tweets, err := api.GetHomeTimeline(nil)
+	// return tweets, err
+
+	foobar, err := ioutil.ReadFile("foobar.json")
+	if err != nil {
+		log.Fatal(err)
+	}
+
+	var tweets []anaconda.Tweet
+	err = json.Unmarshal(foobar, &tweets)
+	return tweets, nil
+}
