@@ -1,3 +1,7 @@
+2015-11-21  Danil Kutkevich  <danil@kutkevich.org>
+
+        * cache.go (loadIds): Add `saveCache` function.
+
 2015-11-19  Danil Kutkevich  <danil@kutkevich.org>
 
         * twitma.go (loadIds): Create json file if not exist.
